--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15
@@ -33,7 +31,7 @@ services:
         condition: service_healthy
     volumes:
       - ./backend:/app
-    command: ["go", "run", "main.go"]
+      - /app/tmp
 
   frontend:
     build:
