--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "axios": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.3.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10"
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
@@ -29,9 +32,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vitest": "^0.28.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3"
+    "vitest": "^0.28.5"
   }
 }
