--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -12,6 +12,10 @@ jobs:
   security-scan-backend:
     name: Security Scan - Backend
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
     steps:
     - uses: actions/checkout@v4
@@ -21,15 +25,18 @@ jobs:
       with:
         go-version: '1.21'
 
-    - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
       with:
-        args: '-fmt sarif -out gosec.sarif ./backend/...'
+        languages: go
+        queries: security-extended,security-and-quality
 
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: gosec.sarif
+    - name: Build Go application
+      working-directory: ./backend
+      run: go build ./...
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
 
     - name: Run govulncheck
       working-directory: ./backend
@@ -40,6 +47,10 @@ jobs:
   security-scan-frontend:
     name: Security Scan - Frontend
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
     steps:
     - uses: actions/checkout@v4
@@ -49,21 +60,26 @@ jobs:
       with:
         node-version: '18'
 
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: javascript
+        queries: security-extended,security-and-quality
+
     - name: Install dependencies
       working-directory: ./frontend
       run: npm ci
 
+    - name: Build frontend
+      working-directory: ./frontend
+      run: npm run build
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+
     - name: Run npm audit
       working-directory: ./frontend
       run: npm audit --audit-level=high
-
-    - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/node@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --severity-threshold=high
-        command: test
 
   dependency-review:
     name: Dependency Review
