--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,77 +130,77 @@ jobs:
         name: backend-binary
         path: backend/main
 
-  docker-build:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend]
-    if: github.ref == 'refs/heads/main'
+  # docker-build:
+  #   name: Build Docker Images
+  #   runs-on: ubuntu-latest
+  #   needs: [test-backend, test-frontend]
+  #   if: github.ref == 'refs/heads/main'
 
-    steps:
-    - uses: actions/checkout@v4
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+  #   - name: Log in to Docker Hub
+  #     uses: docker/login-action@v3
+  #     with:
+  #       username: ${{ secrets.DOCKER_USERNAME }}
+  #       password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push backend image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./backend
-        push: true
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/battleship-backend:latest
-          ${{ secrets.DOCKER_USERNAME }}/battleship-backend:${{ github.sha }}
+  #   - name: Build and push backend image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: ./backend
+  #       push: true
+  #       tags: |
+  #         ${{ secrets.DOCKER_USERNAME }}/battleship-backend:latest
+  #         ${{ secrets.DOCKER_USERNAME }}/battleship-backend:${{ github.sha }}
 
-    - name: Build and push frontend image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./frontend
-        push: true
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/battleship-frontend:latest
-          ${{ secrets.DOCKER_USERNAME }}/battleship-frontend:${{ github.sha }}
+  #   - name: Build and push frontend image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: ./frontend
+  #       push: true
+  #       tags: |
+  #         ${{ secrets.DOCKER_USERNAME }}/battleship-frontend:latest
+  #         ${{ secrets.DOCKER_USERNAME }}/battleship-frontend:${{ github.sha }}
 
-  deploy-lambda:
-    name: Deploy to AWS Lambda
-    runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend]
-    if: github.ref == 'refs/heads/main'
+  # deploy-lambda:
+  #   name: Deploy to AWS Lambda
+  #   runs-on: ubuntu-latest
+  #   needs: [test-backend, test-frontend]
+  #   if: github.ref == 'refs/heads/main'
 
-    steps:
-    - uses: actions/checkout@v4
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.21'
+  #   - name: Set up Go
+  #     uses: actions/setup-go@v4
+  #     with:
+  #       go-version: '1.21'
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
+  #   - name: Set up Node.js
+  #     uses: actions/setup-node@v4
+  #     with:
+  #       node-version: '18'
 
-    - name: Install Serverless Framework
-      run: npm install -g serverless
+  #   - name: Install Serverless Framework
+  #     run: npm install -g serverless
 
-    - name: Build Lambda functions
-      working-directory: ./lambda
-      run: |
-        chmod +x build.sh
-        ./build.sh
+  #   - name: Build Lambda functions
+  #     working-directory: ./lambda
+  #     run: |
+  #       chmod +x build.sh
+  #       ./build.sh
 
-    - name: Deploy to AWS
-      working-directory: ./lambda
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      run: |
-        chmod +x deploy.sh
-        ./deploy.sh prod
+  #   - name: Deploy to AWS
+  #     working-directory: ./lambda
+  #     env:
+  #       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  #       JWT_SECRET: ${{ secrets.JWT_SECRET }}
+  #     run: |
+  #       chmod +x deploy.sh
+  #       ./deploy.sh prod
